# telegram-bot-template

./: .dockerignore  .env.example  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compile_locales.sh  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  checks.yml  codeql.yml  docker-image.yml  greetings.yml  hadolint.yml  linters.yml  merge-me.yaml
admin/: Dockerfile  app.py  config.py  gunicorn_conf.py
admin/static/css/: AdminLTE.min.css
admin/static/css/alt/: AdminLTE-bootstrap-social.min.css  AdminLTE-fullcalendar.min.css  AdminLTE-select2.min.css  AdminLTE-without-plugins.min.css
admin/static/css/skins/: _all-skins.min.css  skin-black-light.min.css  skin-black.min.css  skin-blue-light.min.css  skin-blue.min.css  skin-green-light.min.css  skin-green.min.css  skin-purple-light.min.css  skin-purple.min.css  skin-red-light.min.css  skin-red.min.css  skin-yellow-light.min.css  skin-yellow.min.css
admin/static/js/: app.min.js  demo.js
admin/static/plugins/bootstrap-slider/: slider.css
admin/static/plugins/bootstrap-wysihtml5/: bootstrap3-wysihtml5.all.min.js  bootstrap3-wysihtml5.min.css
admin/static/plugins/chartjs/: Chart.js  Chart.min.js
admin/static/plugins/ckeditor/: LICENSE.md  build-config.js  ckeditor.js  styles.js
admin/static/plugins/ckeditor/lang/: af.js  ar.js  bg.js  bn.js  bs.js  ca.js  cs.js  cy.js  da.js  de-ch.js  de.js  el.js  en-au.js  en-ca.js  en-gb.js  en.js  eo.js  es.js  et.js  eu.js  fa.js  fi.js  fo.js  fr-ca.js  fr.js  gl.js  gu.js  he.js  hi.js  hr.js  hu.js  id.js  is.js  it.js  ja.js  ka.js  km.js  ko.js  ku.js  lt.js  (+27 more)
admin/static/plugins/ckeditor/samples/js/: sample.js  sf.js
admin/static/plugins/ckeditor/samples/old/: index.html
admin/static/plugins/ckeditor/samples/old/assets/uilanguages/: languages.js
admin/static/plugins/ckeditor/samples/old/dialog/assets/: my_dialog.js
admin/static/plugins/ckeditor/samples/old/htmlwriter/assets/outputforflash/: swfobject.js
admin/static/plugins/ckeditor/samples/toolbarconfigurator/js/: abstracttoolbarmodifier.js  fulltoolbareditor.js  toolbarmodifier.js  toolbartextmodifier.js
admin/static/plugins/ckeditor/skins/moono/: dialog.css  dialog_ie.css  dialog_ie7.css  dialog_ie8.css  dialog_iequirks.css  editor.css  editor_gecko.css  editor_ie.css  editor_ie7.css  editor_ie8.css  editor_iequirks.css
admin/static/plugins/colorpicker/: bootstrap-colorpicker.css  bootstrap-colorpicker.min.css
admin/static/plugins/daterangepicker/: daterangepicker.js
admin/static/plugins/fastclick/: fastclick.min.js
admin/static/plugins/flot/: jquery.flot.canvas.min.js  jquery.flot.categories.min.js  jquery.flot.crosshair.min.js  jquery.flot.errorbars.min.js  jquery.flot.fillbetween.min.js  jquery.flot.image.min.js  jquery.flot.navigate.min.js  jquery.flot.pie.min.js  jquery.flot.resize.min.js  jquery.flot.stack.min.js  jquery.flot.symbol.min.js  jquery.flot.threshold.min.js
admin/static/plugins/fullcalendar/: fullcalendar.min.css  fullcalendar.min.js
admin/static/plugins/iCheck/flat/: _all.css  aero.css  blue.css  flat.css  green.css  grey.css  orange.css  pink.css  purple.css  red.css  yellow.css
admin/static/plugins/iCheck/futurico/: futurico.css
admin/static/plugins/iCheck/line/: _all.css  aero.css  blue.css  green.css  grey.css  line.css  orange.css  pink.css  purple.css  red.css  yellow.css
admin/static/plugins/iCheck/minimal/: _all.css  aero.css  blue.css  green.css  grey.css  minimal.css  orange.css  pink.css  purple.css  red.css  yellow.css
admin/static/plugins/iCheck/polaris/: polaris.css
admin/static/plugins/iCheck/square/: _all.css  aero.css  green.css  grey.css  orange.css  pink.css  purple.css  red.css  square.css  yellow.css
admin/static/plugins/jvectormap/: jquery-jvectormap-1.2.2.css  jquery-jvectormap-usa-en.js
admin/static/plugins/timepicker/: bootstrap-timepicker.min.css
admin/templates/: my_master.html
admin/templates/admin/: base.html  custom_index.html  index.html
admin/templates/security/: _macros.html  login_user.html  register_user.html
admin/views/: users.py
bot/: __init__.py  __main__.py  commands.py  database.py  handlers.py  loader.py
bot/analytics/: types.py
bot/analytics/amplitude/: __init__.py  client.py
bot/analytics/google/: __init__.py  client.py
bot/analytics/posthog/: __init__.py  client.py
bot/cache/: redis.py  serialization.py
bot/core/: config.py  loader.py
bot/database/: database.py
bot/database/models/: __init__.py  base.py  user.py
bot/filters/: admin.py  number.py
bot/handlers/: __init__.py  export_users.py  info.py  menu.py  metrics.py  start.py  support.py
bot/keyboards/: default_commands.py
bot/keyboards/inline/: contacts.py  menu.py
bot/locales/en/LC_MESSAGES/: messages.po
bot/locales/ru/LC_MESSAGES/: messages.po
bot/locales/uk/LC_MESSAGES/: messages.po
bot/middlewares/: __init__.py  auth.py  channel_subscribe.py  database.py  i18n.py  logging.py  metrics.py  prometheus.py  throttling.py
bot/services/: analytics.py  users.py
bot/sql/: init.sql
bot/texts/: __init__.py  buttons.json  messages.json
bot/utils/: command.py  singleton.py  users_export.py
configs/grafana/: node-exporter.json
configs/grafana/dashboards/: local.yml
configs/grafana/datasources/: datasource.yml
configs/prometheus/: prometheus.yml  prometheus2.yml
migrations/: env.py
migrations/versions/: 2024-01-23_initial.py  2024-01-24_user_referrer.py
scripts/: format  makemigrations  migrate
scripts/mongo/: backup  restore
scripts/mysql/: backup  restore
scripts/postgres/: backup
